[fuchsia] Fix threading for FilteredServiceDirectory connect call.

Previously, ChildProcessLauncherHelper would bind a ServiceDirectory
connection on the launcher thread. The binding would attach to the
asynchronous dispatcher of the launcher task runner's thread,
rather than the client thread. This generated some test flakiness
during test teardown.

This CL moves the ServiceDirectory binding call so that it runs
in the client thread instead.

Bug: 876894
Change-Id: I53e05d79a24ab8347e3df697f65f84601f618f40
Reviewed-on: https://chromium-review.googlesource.com/1187125
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585667}